force-app/main/default/objects/Flow_Health__c/Flow_Health__c.object-meta.xml
<CustomObject>
    <description>Tracks failure counts and status for Salesforce Flows.</description>
    <label>Flow Health</label>
    <nameField>
        <displayFormat>FH-{0000}</displayFormat>
        <label>Health ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Healths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>