force-app/main/default/objects/Flow_Health__c/fields/Affected_Records__c.field-meta.xml
<CustomField>
    <fullName>Affected_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The estimated number of records affected by the flow failure.</description>
    <label>Affected Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>