force-app/main/default/objects/Flow_Health__c/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of consecutive failures.</description>
    <label>Failure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>