force-app/main/default/objects/Flow_Health__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <description>The API name of the monitored flow.</description>
    <externalId>true</externalId>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>