force-app/main/default/objects/Flow_Health__c/fields/Flow_Label__c.field-meta.xml
<CustomField>
    <fullName>Flow_Label__c</fullName>
    <description>The human-readable label of the monitored flow.</description>
    <label>Flow Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>