force-app/main/default/objects/Flow_Health__c/fields/Last_Failure_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Failure_Date__c</fullName>
    <description>The date and time of the last recorded failure.</description>
    <label>Last Failure Date</label>
    <type>DateTime</type>
</CustomField>